@@ -1,1 +1,1 @@
-DIST 0.5.2.tar.gz 86574 SHA256 c64c27b7e1e9055a25daee48d132a6d0e823da6868def0e4d0a9a29f3ef9e667 SHA512 cb20ad4fd3feac575d17f5f6936ce1f82a13b002100d97f1bf8322f2165580f871ba115011447e22baa69d4217093d234f95c007db3cce8c7843720b38d9c9cf WHIRLPOOL 1af4d36db65c23e5c169e0336a110fde72bac1cdebdbe05689462aa0d03dc378d7246f317a83616d709ad6cf202b524abf23f65ad02ad8e70af02517edb9a9a0
+DIST v1.0.0.tar.gz 151012 SHA256 33c4455a2b2d176ffe9a96e4d719fd6b84d02c3655feeb3fae2e75579b8c5de5 SHA512 3dce307c207628206ac8dfea91fbfc16e6ad7ac4274c7af14baa6d9f0dd16f60b9d87e382e32f620cf871ff979bb201a0e280404086fdb3f5afb269e39f968ec WHIRLPOOL 9d381cbda2a1049587b4d2505dbd9ec472e11e2dc35fef7e2866e9d563b4aa8f08c9dc21ab97ea6a76a509e090b105bed7dc6c829dd73879df4cb9354b004c40
